[package]
name = "pudding"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.15", features = ["full"] }
reqwest = { version = "0.12.3", features = ["json"] }
ethereum-consensus = { git = "https://github.com/ralexstokes/ethereum-consensus", branch = "main" }
ssz_rs = { version = "0.9.0", default-features = false }
serde = "1.0.197"
url = "2.5.0"
actix-web = "4.5.1"
serde_json = "1.0.115"
redis = { version = "0.25.3" }
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
log = "0.4.21"
chrono = "0.4.37"
fern = "0.6.2"